# stock-trend-analyzer

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_scan.yml
config/: rules.yaml  settings.yaml
src/backtest/: engine.py  report.py
src/data/: bootstrap.py  fetcher.py
src/indicators/: calculator.py
src/report/: builder.py  sender.py
src/rules/: __init__.py  engine.py  models.py  parser.py
src/scanner/: scanner.py
src/scheduler/: main.py
src/universe/: builder.py
tests/: conftest.py  test_backtester.py  test_bootstrap.py  test_calculator.py  test_fetcher.py  test_report.py  test_rules_engine.py  test_rules_parser.py  test_scanner.py  test_scheduler.py  test_universe_builder.py
tests/integration/: test_pipeline.py
